前端初始化

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>React + Python 应用</title>
-    <meta name="description" content="一个使用React和Python构建的全栈应用" />
+    <title>Curio</title>
+    <meta name="description" content="Curio is a survey platform that allows you to create and share surveys with your team." />
   </head>
   <body>
     <div id="root"></div>
