前端小修改，加入了chat

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icons/Curio_logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Curio</title>
     <meta name="description" content="Curio is a survey platform that allows you to create and share surveys with your team." />
